Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-13548

Locator lost focus when returning to Creator

XMLWordPrintable

      1. Place the cursor in the edit of the locator bar.
        Now you could type there.
      2. Press Alt+Tab.
        A different, running application appears.
      3. Press Alt+Tab again.
        Creator comes back to foreground.
      4. Press some keys.
        Nothing will happen.

      After step 3, the locator should get the focus back so you could type there directly.

        For Gerrit Dashboard: QTCREATORBUG-13548
        # Subject Branch Project Status CR V

            con Eike Ziller
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes